--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 
     <meta charset="utf-8">
 
-    <title>A PetScan Querry</title>
+    <title>A PetScan Query</title>
 
 </head>
 
 
 <body>
 
-    <h1>A PetScan Querry</h1>
+    <h1>A PetScan Query</h1>
     <p>This is a list of pages/articles that have fewer than 10 links. The city I chose is Kinshasa. Language=french. <strong>PSID 3311599</strong></p>
 
     <ul id="cities">
