Parse json file correctly
I can now parse .json without any modif using good propreties. queries['*'][0].a['*']. I got help from online discussion

--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!doctype html>
-
 <html>
-
-
 <head>
-
     <meta charset="utf-8">
-
     <title>A PetScan Query</title>
 
 </head>
 
-
 <body>
 
     <h1>A PetScan Query</h1>
-    <p>This is a list of pages/articles that have fewer than 10 links. The city I chose is Kinshasa. Language=french. <strong>PSID 3311599</strong></p>
+    <p><strong>PSID 3316252</strong></p>
+    <p><span id="numberArticles"><span> articles|pages retrieved</p>
 
     <ul id="cities">
 
